BuildHughes/translation-tool/inputs/source_meta/objects/HnsCompLocCaseVws__x.object
<CustomObject>
    <description>HnsCompLocCaseVws</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsCompLocCaseVws</externalName>
    <fields>
        <fullName>ACCOUNT_ID__c</fullName>
        <description>ACCOUNT_ID</description>
        <externalDeveloperName>ACCOUNT_ID</externalDeveloperName>
        <label>ACCOUNT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_ID__c</fullName>
        <description>BO_ID</description>
        <externalDeveloperName>BO_ID</externalDeveloperName>
        <label>BO_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT__c</fullName>
        <description>BUSINESS_UNIT</description>
        <externalDeveloperName>BUSINESS_UNIT</externalDeveloperName>
        <label>BUSINESS_UNIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_ID__c</fullName>
        <description>CASE_ID</description>
        <externalDeveloperName>CASE_ID</externalDeveloperName>
        <label>CASE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <description>DESCRIPTION</description>
        <externalDeveloperName>DESCRIPTION</externalDeveloperName>
        <label>DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_SUMMARY__c</fullName>
        <description>RC_SUMMARY</description>
        <externalDeveloperName>RC_SUMMARY</externalDeveloperName>
        <label>RC_SUMMARY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsCompLocCaseVws</label>
    <pluralLabel>HnsCompLocCaseVws</pluralLabel>
</CustomObject>